# OGRS101Lazy

./: .gitmodules  CMakeLists.txt  README.md
src/: s101lazy.cpp
